--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,14 +2,14 @@ server:
   port: 8080
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5434/shareitdb
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:shareit
     password: test
     username: test
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.H2Dialect
         format_sql: 'true'
     hibernate:
       ddl-auto: none
