--- a/server/pom.xml
+++ b/server/pom.xml
@@ -13,6 +13,14 @@
 
     <name>ShareIt Server</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
