--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,15 +1,15 @@
 server:
-  port: 9090
+  port: 8080
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:shareit
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5434/shareitdb
     password: test
     username: test
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: 'true'
     hibernate:
       ddl-auto: none
