--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3.8'
 services:
   gateway:
     build: gateway
-    image: gateway-image
-    container_name: gateway-container
+    image: shareit-gateway
+    container_name: shareit-gateway
     ports:
       - "8080:8080"
     depends_on:
@@ -13,23 +12,28 @@ services:
 
   server:
     build: server
-    image: server-image
-    container_name: server-container
+    image: shareit-server
+    container_name: shareit-server
     ports:
       - "9090:9090"
     depends_on:
       - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
-      - SPRING_DATASOURCE_USERNAME=user
-      - SPRING_DATASOURCE_PASSWORD=userpassword
+      - SPRING_DATASOURCE_USERNAME=shareit
+      - SPRING_DATASOURCE_PASSWORD=shareit
 
   db:
     image: postgres:16.1
-    container_name: shareit-db
+    container_name: postgres
     ports:
-      - "5432:5432"
+      - "6541:5432"
     environment:
+      - POSTGRES_PASSWORD=shareit
+      - POSTGRES_USER=shareit
       - POSTGRES_DB=shareit
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=userpassword
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
